TinyMUX 2.9: CHANGES
Last Update: March 2009

Major changes that may affect performance and require softcode tweaks:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 -- Placeholder.


Feature Additions:
~~~~~~~~~~~~~~~~~
 -- Add ip_address configuration option for boxes with multiple IP addresses
    (several per card, several cards, tunnels, vpn, etc.)


Bug Fixes:
~~~~~~~~~
 -- CMuxAlarm destructor was prepared to wait longer than 15 seconds.
 -- Use mode 5 for rounding instead of mode 3 (Issue 295).
 -- Fix @mail folders (Issue 560).
 -- Change Modified and Created to be AF_CONST instead of AF_GOD.
 -- Include utf8tables.h in the releases.
 -- Command-line option table was defined one element too large.
 -- @list process showed negative values on 64-bit FreeBSD.
 -- Fix use of unitialized memory in mux_strlwr(), mux_strupr(), and
    mux_foldpunc() (Issue 562).
 -- VisibleLock not treated as such by lock() and elock() (Issue 570).
 -- Include iso8859-2 value to three other affected configuration
    options.
 -- Most of charset_nametab[] options are not unique in the first five
    characters.
 -- Fix color_convert() to use all of the 2*LBUF_SIZE buffer
    (Issue 443).
 -- Add boundary to avoid crash with v(-1) (Issue 580).


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 -- Use run-length encoded Unicode tables to save space.


Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Change default fixed_tel_message and fixed_home_message
    (Issue 579).


Miscellaneous:
~~~~~~~~~~~~~
 -- Split, rename, refact, and generally rearrange things.
 -- When OpenSSL is enabled, use its SHA1 routines instead of the one
    bundled with MUX.
 -- Use mux_vsprintf() implementation of *printf() functionality.
 -- Firan is now using 24000-byte buffers.
 -- Surpress GCC 4 warnings about sentinels.
 -- Fix compiler warning in slave.cpp about unused return value.
 -- Move CLog from svdhash.cpp to log.cpp.
 -- Fix compiler warnings in CLog about unused return values.